--- a/android/assets/jsons/Translations/Notifications.json
+++ b/android/assets/jsons/Translations/Notifications.json
@@ -6,7 +6,7 @@
         // I remember that some languages have upside-down question marks before to mark a question
 
         "Research of [technologyName] has completed!":{ // For technology notifications EG Research of Writing has completed
-            Italian:"I nostri saggi hanno scoperto la tecnologia [technologyName]!"
+            Italian:"Abbiamo scoperto la tecnologia [technologyName]!"
             Russian:"Исследование [technologyName] завершено!"
             French:"Recherche de [technologyName] est completée!"
             Romanian:"Cercetarea [technologyName] s-a încheiat!"
@@ -155,7 +155,7 @@
             Italian:"[cityName] non può più costruire [construction]"
         }
 		
-		"One of our trades with [nation] has ended": {
+	"One of our trades with [nation] has ended": {
             Italian:"Un nostro accordo con [nation] è terminato."
         },
 
@@ -226,9 +226,9 @@
             Japanese:"敵[unit]が私たちの[ourUnit]を攻撃しました"
         }
 
-		"Enemy city [cityName] has attacked our [ourUnit]":{
-			Italian:"La città nemica [cityName] ha attaccato [ourUnit]"
-		}
+	"Enemy city [cityName] has attacked our [ourUnit]":{
+		Italian:"La città nemica [cityName] ha attaccato [ourUnit]"
+	}
 		
         "An enemy [unit] has captured [cityname]":{
             Italian:"Un'unità nemica [unit] ha conquistato [cityname]"
@@ -269,9 +269,9 @@
             Japanese:"敵[unit]が私たちの[ourUnit]を破壊しました"
         }
 		
-		"Enemy city [cityName] has destroyed our [ourUnit]":{
-			Italian:"La città nemica [cityName] ha distrutto [ourUnit]"
-		}
+	"Enemy city [cityName] has destroyed our [ourUnit]":{
+		Italian:"La città nemica [cityName] ha distrutto [ourUnit]"
+	}
         
         "An enemy [unit] was destroyed while attacking [cityname]":{
             Italian:"Un'unità nemica [unit] è stata distrutta mentre attaccava [cityname]"
@@ -350,7 +350,9 @@
             Japanese:"[civName]の文明は破壊されました！"
         }
 		
-		"We have captured a barbarian encampment and recovered [goldAmount] gold!":{}
+	"We have captured a barbarian encampment and recovered [goldAmount] gold!":{
+            Italian:"Nella cattura di un accampamento barbaro, abbiamo recuperato [goldAmount] Oro!"
+	}
         
     /////////////////	ruins
 
