Update Italian Translation Other
Added a missing Italian translation

--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -416,6 +416,7 @@
 	}
 	
 	"Create [improvement]":{ // for great units, fishing boats, etc.
+		Italian:"Costruisci [improvement]"
 		French:"Construire [improvement]"
 	}
 	
