--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -262,6 +262,12 @@
 		//same in German
 	}
 
+	/*
+	"Galley":{
+		Italian:"Galea"
+	}//The Galley is the Barbarian starter naval military unit, and it's weaker than Trireme
+	*/
+
 	"Cannot enter ocean tiles":{
 		Spanish:"No puede entrar al oceanó"
 		Italian:"Non può entrare nelle caselle oceaniche"
