Can no longer pass the turn when popups have not been dealt with

--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -343,7 +343,7 @@
 		French:"Votre soi-disant 'amitié' ne vaut rien."
 	}
 	
-	"You have publically denounced us!":{
+	"You have publicly denounced us!":{
 		Italian:"Ci hai denunciato pubblicamente di fronte al mondo!"
 		French:"Vous nous avez dénoncé publiquement!"
 	}
