Added initial logic for promising not to settle cities near other civs - not yet activated

--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -358,6 +358,8 @@
 		French:"Vous avez dénoncé nos ennemies"
 	}
 	
+	"You betrayed your promise to not settle cities near us":{}
+	
 	
 ////// Trade	
 
